--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-z<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>vishnu html</title>
@@ -38,7 +38,7 @@ background-position: fixed;
 <div class="hero-image">
   <div class="hero-text">
     <center><h1 style="font-size:50px">Navaneethan Page</h1></center>
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/vishnunew.html"><button class="button">welcome</button></a></center>
+<center><a href="vishnunew.html"><button class="button">welcome</button></a></center>
 </div>
 </div>
   </center></h3></center></body></html>
