--- a/vishnunew.html
+++ b/vishnunew.html
@@ -81,7 +81,7 @@ background-repeat:no repeat;
 <center><img src="photo.jpg"height="330px"width="300px"></center>
 </div>
 
-  <a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/photos.html"><button class="button">photos</button></a>
+  <a href="photos.html"><button class="button">photos</button></a>
 <a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/educationnava.html"><button class="button">education</button></a>
 <a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/data.html"><button class="button">data</button></a>
 <a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/contact.html"><button class="button">contact</button></a>
