--- a/vishnunew.html
+++ b/vishnunew.html
@@ -82,11 +82,11 @@ background-repeat:no repeat;
 </div>
 
   <a href="photos.html"><button class="button">photos</button></a>
-<a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/educationnava.html"><button class="button">education</button></a>
-<a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/data.html"><button class="button">data</button></a>
-<a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/contact.html"><button class="button">contact</button></a>
-<a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/conclusion.html"><button class="button">conclusion</button></a>
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/welcome1.html"><button class="button">back</button></a></center>
+<a href="educationnava.html"><button class="button">education</button></a>
+<a href="data.html"><button class="button">data</button></a>
+<a href="contact.html"><button class="button">contact</button></a>
+<a href="conclusion.html"><button class="button">conclusion</button></a>
+<center><a href="index.html"><button class="button">back</button></a></center>
  </div>
 </div>
   </center></h3></center></body></html>
