--- a/educationnava.html
+++ b/educationnava.html
@@ -143,8 +143,8 @@ background-attachment: fixed;
 <center><h1><i>ppt presentation</i></h1></center>
 <h2><b>water and sea pollution</b></h2>
 <center><a href="sea.pptx" target="_blank"><img src="ppt.jpg"height="100px"width="100px"</a></center>
- <center><a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/photos.html"><button class="button">back</button></a></center>
- <center><a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/data.html"><button class="button">next</button></a></center>
+ <center><a href="photos.html"><button class="button">back</button></a></center>
+ <center><a href="data.html"><button class="button">next</button></a></center>
 </div>
 </div>
 </body>
