--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,13 @@ body{
 		<th>9524180019</th>
 	</tr>
 	<tr>
-		<th><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/navaneethan.navaneethan.5070276"><img src="face1.png"height="100px"with="100px"></th>
+		<th><a href="navaneethan.navaneethan.5070276"><img src="face1.png"height="100px"with="100px"></th>
 		<th>facebook</th>
 		<th>Navaveethan Navaneethan</th>
 		
 	</tr>
 	<tr>
-		<th><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/WhatsApp1.html"><img src="whatsapp.jpg"height="100px"with="100px"></th>
+		<th><a href="WhatsApp1.html"><img src="whatsapp.jpg"height="100px"with="100px"></th>
 		<th>whatsapp</th>
 		<th>9524180019</th>
 	</tr>
@@ -83,8 +83,8 @@ body{
 		<th>navaneethavishnu322@gmailcom</th>
 	</tr>
 </table></center>
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/data.html"><button class="button">back</button></a></center>
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/conclusion.html"><button class="button">next</button></a></center>
+<center><a href="data.html"><button class="button">back</button></a></center>
+<center><a href="conclusion.html"><button class="button">next</button></a></center>
 </div>
 </div>
 </div>
