--- a/conclusion.html
+++ b/conclusion.html
@@ -47,7 +47,7 @@ line-height:35px;
 <body background="thank.jpg">
 <h1>conclusion</h1>
 <h2><u>success has no time limit</u><h2> 
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/contact.html"><button class="button">back</button></a></center>
+<center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
 </html>
 
