--- a/photos.html
+++ b/photos.html
@@ -89,7 +89,7 @@ margin-top:25
 </tr>
 </table>
 </center>
-<center><a href="file:///C:/Users/indhu_2/Desktop/vishnu%20page/vishnunew.html"><button class="button">back</button></a></center>
-<center><a href="file:///C:\Users\indhu_2\Desktop\vishnu%20page/educationnava.html"><button class="button">next</button></a></center>
+<center><a href="vishnunew.html"><button class="button">back</button></a></center>
+<center><a href="educationnava.html"><button class="button">next</button></a></center>
 </body>
 </html>
