--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ font-style:bold;
   margin: 0;
 }
 body{
-background-size: 100%;
-background-position: fixed;
+background-size: cover;
+background-attachement: fixed;
 }
 .button {
   padding: 10px 10px;
