--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ font-style:bold;
   margin: 0;
 }
 body{
+   background-repeat:no repeate;
 background-size: cover;
 background-attachement: fixed;
 }
