--- a/photos.html
+++ b/photos.html
@@ -30,9 +30,9 @@ p {
   width: 60%;
 }
 body{
- background-size:100%;
+ background-size:cover;
  background-repeat: no repeat;
- background-position: fixed;
+ background-attachement: fixed;
 }
 .school{
 backround-size:120px;
