--- a/photos.html
+++ b/photos.html
@@ -32,7 +32,7 @@ p {
 body{
  background-size:cover;
  background-repeat: no repeat;
- background-attachement: fixed;
+ background-attachment: fixed;
 }
 .school{
 backround-size:120px;
