--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ font-style:bold;
 body{
    background-repeat:no repeate;
 background-size: cover;
-background-attachement: fixed;
+background-attachment: fixed;
 }
 .button {
   padding: 10px 10px;
