--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-style:bold;
   margin: 0;
 }
 body{
-   background-repeat:no repeate;
+   background-repeat:no repeat;
 background-size: cover;
 background-attachment: fixed;
 }
