--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@ h1 {
 margin:20px 20px 20px 20px;
 }
 body{
-	background-size:100%;
+	background-size:cover;
 	background-repeat: no-repeat;
 	background-origin: 10px;
-	background-position: fixed;
+	background-attachment: fixed;
 	margin: 10px;
 	border: double; 
 	margin: 10px 10px 10px 10px;
