--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ body{
 		<th>9524180019</th>
 	</tr>
 	<tr>
-		<th><a href="https://www.facebook.com/navaneethan.navaneethan.5070276"><img src="face1.png"height="100px"with="100px"></th>
+		<th><a href="https://www.facebook.com/navaneethan.navaneethan.5070276"><img src="face1.PNG" height="100px"with="100px"></th>
 		<th>facebook</th>
 		<th>Navaveethan Navaneethan</th>
 		
