--- a/vishnunew.html
+++ b/vishnunew.html
@@ -61,10 +61,11 @@ margin-right:470px;
 padding-top:5px;
 margin-top:10px;
 margin-bottom:10px;
+   background-radius:50%
 }
 body{
-background-size: 100%;
-background-position: fixed;
+background-size: cover;
+background-attachment: fixed;
 background-repeat:no repeat;
 }
 
