--- a/vishnunew.html
+++ b/vishnunew.html
@@ -53,7 +53,6 @@ h4 {
 margin:20px 20px 20px 20px;
 }
 .image {
-margin:20px 20px 20px 20px;
 border:solid;
 border-color:red;
 margin-left:550px;
@@ -61,7 +60,7 @@ margin-right:470px;
 padding-top:5px;
 margin-top:10px;
 margin-bottom:10px;
-   background-radius:50%
+   background-radius:50%;
 }
 body{
 background-size: cover;
