--- a/vishnunew.html
+++ b/vishnunew.html
@@ -60,7 +60,7 @@ margin-right:470px;
 padding-top:5px;
 margin-top:10px;
 margin-bottom:10px;
-   barder-radius:50%;
+   border-radius:50%;
 }
 body{
 background-size: cover;
