--- a/vishnunew.html
+++ b/vishnunew.html
@@ -52,8 +52,9 @@ h4 {
   cursor: pointer;
 margin:20px 20px 20px 20px;
 }
-.image {
+.image center {
    border-radius:50%;
+   
 }
 body{
 background-size: cover;
