--- a/vishnunew.html
+++ b/vishnunew.html
@@ -72,7 +72,7 @@ background-repeat:no repeat;
  <center> <h3>second year</h3><h3><center>
   <center><b><h3>ksrce</h3></b></center>
 <div class="image">
-<center><img src="photo.jpg"height="330px"width="300px"></center>
+<center><img src="photo.jpg" height="px" width="px"></center>
 </div>
 
   <a href="photos.html"><button class="button">photos</button></a>
