--- a/vishnunew.html
+++ b/vishnunew.html
@@ -54,7 +54,7 @@ margin:20px 20px 20px 20px;
 }
 .image center {
    border-radius:50%;
-   
+   border-color:red;
 }
 body{
 background-size: cover;
