--- a/vishnunew.html
+++ b/vishnunew.html
@@ -53,7 +53,8 @@ h4 {
 margin:20px 20px 20px 20px;
 }
 .image center {
-   border-radius:50%;
+   border: 2px solid;
+    border-radius: 25px;
 }
 body{
 background-size: cover;
