--- a/vishnunew.html
+++ b/vishnunew.html
@@ -54,6 +54,9 @@ margin:20px 20px 20px 20px;
 }
 .image center {
    border-radius:250%;
+   border-radius: rounded corners;
+
+
 }
 body{
 background-size: cover;
