--- a/vishnunew.html
+++ b/vishnunew.html
@@ -52,11 +52,8 @@ h4 {
   cursor: pointer;
 margin:20px 20px 20px 20px;
 }
-.image center {
-   border-radius:250%;
-   border-radius: rounded corners;
-
-
+.img-circle {
+    border-radius: 50%;
 }
 body{
 background-size: cover;
