--- a/vishnunew.html
+++ b/vishnunew.html
@@ -71,10 +71,7 @@ background-repeat:no repeat;
  <center> <h3>second year</h3><h3><center>
   <center><b><h3>ksrce</h3></b></center>
 <div class="image">
-   
-	<img src="photo.jpg" alt="the persons who are good only see me" class="image" style="width:400px;height:500px">
-
-<center><img src="photo.jpg" height="250px" width="300px" border-radius"rounded corners"></center>
+   <center><img src="photo.jpg" alt="the persons who are good only see me" class="image" style="width:400px;height:500px"></center>
 </div>
 
   <a href="photos.html"><button class="button">photos</button></a>
