--- a/vishnunew.html
+++ b/vishnunew.html
@@ -54,7 +54,8 @@ margin:20px 20px 20px 20px;
 }
 img{
     border-radius: 50%;
-}
+border-color:block;
+   }
 body{
 background-size: cover;
 background-attachment: fixed;
