--- a/conclusion.html
+++ b/conclusion.html
@@ -24,7 +24,7 @@ font-size:100px;
 font-weight:100px;
 font-family:cursive;
 }
-  p{
+  .p {
     color:orange;
     text-align:right;
     font-style:italic;
@@ -55,7 +55,10 @@ line-height:35px;
 <body background="thank.jpg">
 <h1>conclusion</h1>
 <h2><u>success has no time limit</u><h2> 
-  <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future, and primary education is where teachers can bring creativity in children at that level.</p>
+  <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,
+    and primary education 
+    where teachers can bring creativity
+    in children at that level.</p>
 <center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
 </html>
