--- a/conclusion.html
+++ b/conclusion.html
@@ -31,10 +31,11 @@ font-family:cursive;
     background-color:gray;
     line-height:50px;
     font-family:arial;
+    letter-spacing:5px;
   }
 body{
-background-size: 100%;
-background-position: fixed;
+background-size: cover;
+background-attachment: fixed;
 background-repeat:no repeat;
 }
 .button {
