--- a/conclusion.html
+++ b/conclusion.html
@@ -29,7 +29,9 @@ font-family:cursive;
     text-align:right;
     font-style:italic;
     background-color:gray;
-    line-height:50px;
+    line-height:70px;
+    line-weight:70px;
+    line-size:70px;
     font-family:arial;
     letter-spacing:5px;
   }
