--- a/conclusion.html
+++ b/conclusion.html
@@ -33,7 +33,6 @@ font-family:cursive;
     line-weight:70px;
     line-size:70px;
     font-family:arial;
-    letter-spacing:5px;
   }
 body{
 background-size: cover;
@@ -58,10 +57,7 @@ line-height:35px;
 <body background="thank.jpg">
 <h1>conclusion</h1>
 <h2><u>success has no time limit</u></h2> 
-  <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,
-    and primary education 
-    where teachers can bring creativity
-    in children at that level.</p>
+  <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p>
 <center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
 </html>
