--- a/conclusion.html
+++ b/conclusion.html
@@ -56,7 +56,7 @@ line-height:35px;
 </style></head>
 <body background="thank.jpg">
 <h1>conclusion</h1>
-<h2><u>success has no time limit</u></h2> 
+<h2><u>success has no time limit</u><h2> 
   <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p>
 <center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
