--- a/conclusion.html
+++ b/conclusion.html
@@ -24,7 +24,7 @@ font-size:100px;
 font-weight:100px;
 font-family:cursive;
 }
-  .p {
+  h3{
     color:orange;
     text-align:right;
     font-style:italic;
@@ -56,8 +56,8 @@ line-height:35px;
 </style></head>
 <body background="thank.jpg">
 <h1>conclusion</h1>
-<h2><u>success has no time limit</u><h2> 
-  <p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p>
+<h2><u>success has no time limit</u></h2> 
+  <h3><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</h3>
 <center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
 </html>
