--- a/conclusion.html
+++ b/conclusion.html
@@ -26,12 +26,12 @@ font-family:cursive;
 }
   h3{
     color:orange;
-    text-align:right;
+    text-align:center;
     font-style:italic;
     background-color:gray;
-    line-height:70px;
-    line-weight:70px;
-    line-size:70px;
+    line-height:90px;
+    line-weight:90px;
+    line-size:90px;
     font-family:arial;
   }
 body{
@@ -57,7 +57,7 @@ line-height:35px;
 <body background="thank.jpg">
 <h1>conclusion</h1>
 <h2><u>success has no time limit</u></h2> 
-  <h3><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</h3>
+  <center><h3><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</h3></center>
 <center><a href="contact.html"><button class="button">back</button></a></center>
 </body>
 </html>
