--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ background-size: cover;
 background-attachment: fixed;
 }
 .button {
-  padding: 100px 100px;
+  padding: 10px 10px;
+   margin:100px 100px 50px 50px;
   font-size: 24px;
   text-align: center;
   cursor: pointer;
