--- a/conclusion.html
+++ b/conclusion.html
@@ -39,19 +39,18 @@ background-size: cover;
 background-attachment: fixed;
 background-repeat:no repeat;
 }
-.button {
-  padding: 10px 10px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
-  background-color: black;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 9px green;
-  cursor: pointer;
-line-height:35px;
+  .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    padding: 10px 10px;
+     border-radius: 20px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    line-height:35px;
 }
 </style></head>
 <body background="thank.jpg">
