--- a/conclusion.html
+++ b/conclusion.html
@@ -39,6 +39,16 @@ background-size: cover;
 background-attachment: fixed;
 background-repeat:no repeat;
 }
+  .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
 </style></head>
 <body background="thank.jpg">
 <h1>conclusion</h1>
