--- a/conclusion.html
+++ b/conclusion.html
@@ -42,7 +42,7 @@ background-repeat:no repeat;
   .button {
     background-color: #4CAF50; /* Green */
     border: none;
-    color: white;
+    color: green;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
