--- a/conclusion.html
+++ b/conclusion.html
@@ -43,11 +43,14 @@ background-repeat:no repeat;
     background-color: #4CAF50; /* Green */
     border: none;
     color: green;
+    background-color:block; 
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin:20px 20px 20px 20px;
+
 }
 </style></head>
 <body background="thank.jpg">
