--- a/conclusion.html
+++ b/conclusion.html
@@ -42,8 +42,8 @@ background-repeat:no repeat;
   .button {
     background-color: #4CAF50; /* Green */
     border: none;
-    color: green;
-    background-color:block; 
+    color: blue;
+    background-color: #900; 
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
