--- a/conclusion.html
+++ b/conclusion.html
@@ -40,10 +40,10 @@ background-attachment: fixed;
 background-repeat:no repeat;
 }
   .button {
-    background-color: #4CAF50; /* Green */
+    color: #FFF;
+  background-color: #900;
+  font-weight: bold;
     border: none;
-    color: blue;
-    background-color: #900; 
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
