--- a/conclusion.html
+++ b/conclusion.html
@@ -41,7 +41,7 @@ background-repeat:no repeat;
 }
   .button {
     color: #FFF;
-  background-color: #900;
+  background-color: black;
   font-weight: bold;
     border: none;
     padding: 15px 32px;
