--- a/vishnunew.html
+++ b/vishnunew.html
@@ -38,20 +38,18 @@ h4 {
   font-size: 16px;
   font-weight: 300;
 }
-.button {
-  padding: 10px 10px 10px 10px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
+    .button {
+    color: #FFF;
   background-color: black;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 9px green;
-  cursor: pointer;
-margin:20px 20px 20px 20px;
-}
+  font-weight: bold;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin:20px 20px 20px 20px;
+
 img{
     border-radius: 50%;
 border-color:block;
