--- a/index.html
+++ b/index.html
@@ -21,26 +21,25 @@ background-size: cover;
 background-attachment: fixed;
 }
 .button {
-  padding: 10px 10px;
-   margin:200px 50px 250px 50px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
+    .button {
+    color: #FFF;
   background-color: black;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 9px green;
-  cursor: pointer;
-}
+  font-weight: bold;
+    border: none;
+      margin:300px 50px 200px 50px;
+         padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+   }
 </style>
 </head>
 <body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
     <center><h1 style="font-size:50px">Navaneethan Page</h1></center>
-<center><a href="vishnunew.html"><button class="button">welcome</button></a></center>
+<center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
   </center></h3></center></body></html>
