--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@ background-attachment: fixed;
 .button {
     .button {
     color: #FFF;
-  background-color: black;
+  background-color: blue;
+      margin:300px 50px 200px 50px;
+       font-weight:25px;
   font-weight: bold;
     border: none;
-      margin:300px 50px 200px 50px;
          padding: 10px 10px;
     text-align: center;
     text-decoration: none;
