--- a/photos.html
+++ b/photos.html
@@ -42,21 +42,18 @@ margin: 0 auto;
 text-align:center;
 border:line;
 }
-.button {
-  padding: 10px 10px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
-  background-color: black;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 9px green;
-  cursor: pointer;
-padding-top:15px;
-margin-top:25
-}
+  .button {
+    color: #FFF;
+  background-color: blue;
+  font-weight: bold;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin:20px 20px 20px 20px;
+   }
 </style>
 <
 <body background="clg.jpg">
