--- a/educationnava.html
+++ b/educationnava.html
@@ -40,20 +40,18 @@ h4 {
   font-size: 16px;
   font-weight: 300;
 }
-.button {
-  paing: 10px 10px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
+ .button {
+    color: #FFF;
   background-color: black;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 9px green;
-  cursor: pointer;
-margin-top:20px;
-}
+  font-weight: bold;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin:20px 20px 20px 20px;
+   }
 body{
 
 background-repeat:no repeat;
