--- a/educationnava.html
+++ b/educationnava.html
@@ -42,7 +42,7 @@ h4 {
 }
  .button {
     color: #FFF;
-  background-color: black;
+  background-color: blue;
   font-weight: bold;
     border: none;
     padding: 15px 32px;
