--- a/conclusion.html
+++ b/conclusion.html
@@ -29,6 +29,7 @@ font-family:cursive;
     text-align:center;
     font-style:italic;
     background-color:gray;
+    width:50px;
     line-height:90px;
     line-weight:90px;
     line-size:90px;
