--- a/conclusion.html
+++ b/conclusion.html
@@ -30,9 +30,9 @@ font-family:cursive;
     font-style:italic;
     background-color:gray;
     width:255px;
-    line-height:90px;
-    line-weight:90px;
-    line-size:90px;
+    line-height:70px;
+    line-weight:100px;
+    line-spacing:5px;
     font-family:arial;
   }
 body{
