--- a/conclusion.html
+++ b/conclusion.html
@@ -34,6 +34,8 @@ font-family:cursive;
     line-weight:100px;
     line-spacing:5px;
     font-family:arial;
+    boder-radius:15px;
+    border:5px double black;
   }
 body{
 background-size: cover;
