--- a/vishnunew.html
+++ b/vishnunew.html
@@ -21,23 +21,6 @@ h2 {
   font-size: 28px;
   font-weight: 100;
 }
-
-h3 {
-  color: orange;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 28px;
-  font-weight: 400;
-  line-height: 30px;
-  margin: 10px 0px;
-  text-align: center;
-}
-
-h4 {
-  color: rgba(red);
-  font-family: 'Quicksand', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-}
     .button {
     color: #FFF;
   background-color: blue;
@@ -65,10 +48,10 @@ background-repeat:no repeat;
   <body background="backimage1.jpg">
 <div class="hero-image>
 <div class="hero-text>
-  <center><h1>Navaneethamahavishnu</h1></center>
-  <center><h2>computer science and engineering</h2><h2></h2></center>
- <center> <h3>second year</h3><h3><center>
-  <center><b><h3>ksrce</h3></b></center>
+  <center><h1><i>Navaneethamahavishnu</i></h1></center>
+   <center><h2><i>computer science and engineering</i></h2><h2></h2></center>
+   <center> <h2><i>second year</i></h2><center>
+    <center><h2><i>ksrce</i></h2></center>
 <div class="image">
    <center><img src="photo.jpg" alt="the persons who are good only see me" class="image" style="width:400px;height:500px"></center>
 </div>
