--- a/vishnunew.html
+++ b/vishnunew.html
@@ -21,7 +21,7 @@ h2 {
   font-size: 28px;
   font-weight: 100;
 }
-    h3{
+    p {
     color:orange;
     text-align:center;
     font-style:italic;
@@ -54,6 +54,7 @@ body{
 background-size: cover;
 background-attachment: fixed;
 background-repeat:no repeat;
+   boder:3px dotted black;
 }
 
   </style></head>	
@@ -73,7 +74,7 @@ background-repeat:no repeat;
 <a href="data.html"><button class="button">data</button></a>
 <a href="conclusion.html"><button class="button">conclusion</button></a>
       <h2><u>success has no time limit</u></h2> 
-  <right><h3><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</h3></right>
+  <right><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></right>
 <center><a href="index.html"><button class="button">back</button></a></center>
  </div>
 </div>
