--- a/vishnunew.html
+++ b/vishnunew.html
@@ -33,6 +33,8 @@ h2 {
     font-family:arial;
     boder-radius:50px;
     border:5px double black;
+         margin:20px 20px 20px 20px;
+
   }
     .button {
     color: #FFF;
