--- a/educationnava.html
+++ b/educationnava.html
@@ -13,7 +13,7 @@ h1{
   }
   
 h2 {
-  color:red;
+  color:green;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   font-size: 45px;
