--- a/educationnava.html
+++ b/educationnava.html
@@ -57,6 +57,7 @@ body{
 background-repeat:no repeat;
 background-size: cover;
 background-attachment: fixed;
+   border:5px dotted black;
 }
 </style></head>	
   <body background="clg2.jpg">
