--- a/educationnava.html
+++ b/educationnava.html
@@ -144,6 +144,7 @@ background-attachment: fixed;
 <center><h1><i>ppt presentation</i></h1></center>
 <h2><b>water and sea pollution</b></h2>
 <center><a href="sea.pptx" target="_blank"><img src="ppt.jpg"height="100px"width="100px"</a></center>
+   <center><a href="vishnunew.html"><button class="button">home</button></a></center>
  <center><a href="photos.html"><button class="button">back</button></a></center>
  <center><a href="data.html"><button class="button">next</button></a></center>
 </div>
