--- a/photos.html
+++ b/photos.html
@@ -86,6 +86,7 @@ border:line;
 </tr>
 </table>
 </center>
+  <center><a href="vishnunew.html"><button class="button">home</button></a></center>
 <center><a href="vishnunew.html"><button class="button">back</button></a></center>
 <center><a href="educationnava.html"><button class="button">next</button></a></center>
 </body>
