--- a/educationnava.html
+++ b/educationnava.html
@@ -15,7 +15,7 @@ h1{
   }
   
 h2 {
-  color:green;
+  color:black;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   font-size: 45px;
@@ -46,7 +46,7 @@ h4 {
     color: #FFF;
   background-color: blue;
   font-weight: bold;
-    border: none;
+    border: 3px solid black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
