--- a/educationnava.html
+++ b/educationnava.html
@@ -3,19 +3,19 @@
 <head><title>education vishnu</title>
 <style>
 h1{ 
-   color: blue;
-   background-colour:blue;
+   color: black;
+   background-colour:black;
   font-family:arial;
-  font-size: 70px;
-  font-weight: 400;
-  line-height: 60px;
+  font-size: 90px;
+  font-weight: 500;
+  line-height: 70px;
   margin: 0;
    border:double black;
    border-radius:15px;
   }
   
 h2 {
-  color:black;
+  color:blue;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   font-size: 45px;
