--- a/educationnava.html
+++ b/educationnava.html
@@ -3,8 +3,7 @@
 <head><title>education vishnu</title>
 <style>
 h1{ 
-   color: black;
-   background-colour:black;
+   color: green;
   font-family:arial;
   font-size: 90px;
   font-weight: 500;
@@ -43,10 +42,10 @@ h4 {
   font-weight: 300;
 }
  .button {
-    color: #FFF;
-  background-color: blue;
+    color: red;
+  background-color: gray;
   font-weight: bold;
-    border: 3px solid black;
+    border: 3px solid silver;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
