--- a/educationnava.html
+++ b/educationnava.html
@@ -9,7 +9,7 @@ h1{
   font-weight: 500;
   line-height: 70px;
   margin: 0;
-   border:double black;
+   border:double green;
    border-radius:15px;
   }
   
@@ -45,7 +45,7 @@ h4 {
     color: red;
   background-color: gray;
   font-weight: bold;
-    border: 3px solid silver;
+    border: 3px solid black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
