--- a/educationnava.html
+++ b/educationnava.html
@@ -45,7 +45,7 @@ h4 {
     color: red;
   background-color: gray;
   font-weight: bold;
-    border: 3px solid black;
+    border: 3px solid silver;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
