--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ background-size: cover;
 background-attachment: fixed;
 }
 .button {
-    color: #FFF;
-  background-color: blue;
+    color: red;
+  background-color: gray;
+   border:3px solid silver;
       margin:350px 50px 150px 50px;
        font-weight:25px;
   font-weight: bold;
-    border: none;
          padding: 10px 10px;
     text-align: center;
     text-decoration: none;
