--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body{
    background-repeat:no repeat;
 background-size: cover;
 background-attachment: fixed;
+   border:3px dotted black;
 }
 .button {
     color: red;
