--- a/vishnunew.html
+++ b/vishnunew.html
@@ -37,10 +37,10 @@ h2 {
 
   }
     .button {
-    color: #FFF;
-  background-color: blue;
+    color: red;
+  background-color: gray;
   font-weight: bold;
-    border: none;
+    border: 3px solid silver;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
