--- a/photos.html
+++ b/photos.html
@@ -33,6 +33,7 @@ body{
  background-size:cover;
  background-repeat: no repeat;
  background-attachment: fixed;
+  borde:3px dotted black;
 }
 .school{
 backround-size:120px;
@@ -43,10 +44,10 @@ text-align:center;
 border:line;
 }
   .button {
-    color: #FFF;
-  background-color: blue;
+    color: red;
+  background-color: gray;
   font-weight: bold;
-    border: none;
+    border: 3px solid silver;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
