--- a/vishnunew.html
+++ b/vishnunew.html
@@ -71,8 +71,7 @@ background-repeat:no repeat;
 <div class="image">
    <center><img src="photo.jpg" alt="the persons who are good only see me" class="image" style="width:400px;height:500px"></center>
 </div>
-  <a href="photos.html"><button class="button">photos</button></a>
-<a href="educationnava.html"><button class="button">education</button></a>
+<a href="educationnava.html"><button class="button">about</button></a>
 <a href="data.html"><button class="button">data</button></a>
       <h2><u>success has no time limit</u></h2> 
   <right><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></right>
