--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!-- saved from url=(0051)file:///C:\Users\indhu_2\Desktop\vishnu page/n.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -34,6 +33,11 @@ h2 {
     boder-radius:50px;
     border:5px double black;
          margin:20px 20px 20px 20px;
+  }
+  .margin{
+background-color:lavender;
+border:3px double black;
+border-radius:20px;
 
   }
     .button {
@@ -51,6 +55,7 @@ h2 {
 img{
     border-radius: 50%;
 border-color:block;
+border:3px solid silver ;
    }
 body{
 background-size: cover;
@@ -58,23 +63,33 @@ background-attachment: fixed;
 background-repeat:no repeat;
    boder:3px dotted black;
 }
-
+.tht{
+  color: black;
+  font-weight: 50px;
+  font-size: 30px;
+  font-feature-settings: all;
+  line-height: 30px;
+  word-wrap: break-word;
+  word-spacing: 3px;
+}
   </style></head>	
 
-  <body background="backimage1.jpg">
+  <body background="backimage1.jpg" alt="gif1">
 <div class="hero-image>
 <div class="hero-text>
+<div class="margin">
   <center><h1><i>Navaneethamahavishnu</i></h1></center>
    <center><h2><i>computer science and engineering</i></h2><h2></h2></center>
    <center> <h2><i>second year</i></h2><center>
-    <center><h2><i>ksrce</i></h2></center>
+    <center><h2><i>ksr college of engineering</i></h2></center>
+    </div>
 <div class="image">
-   <center><img src="photo.jpg" alt="the persons who are good only see me" class="image" style="width:400px;height:500px"></center>
+   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px"></center>
 </div>
-<a href="educationnava.html"><button class="button">about</button></a>
-<a href="data.html"><button class="button">data</button></a>
-      <h2><u>success has no time limit</u></h2> 
-  <right><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></right>
+<center><a href="educationnava.html"><button class="button">about</button></a></center>
+<center><a href="data.html"><button class="button">data</button></a></center>
+     <div class="tht"><center><u>success has no time limit</u></center></div>
+  <center><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></center>
 <center><a href="index.html"><button class="button">back</button></a></center>
  </div>
 </div>
