--- a/vishnunew.html
+++ b/vishnunew.html
@@ -35,7 +35,7 @@ h2 {
          margin:20px 20px 20px 20px;
   }
   .margin{
-background-color:lavender;
+background-color:#76aefc;
 border:3px double black;
 border-radius:20px;
 
