--- a/data.html
+++ b/data.html
@@ -15,7 +15,7 @@ padding:20px 20px 20px 20px;
   }
   
 h2 {
-  color:red;
+  color: #020316;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   font-size: 45px;
@@ -26,7 +26,6 @@ line-height:60px;
 line-weight:30px;
 padding:10px 20px 10px 20px;
 }
-
 h3 {
   color: green;
   font-family: 'Quicksand', sans-serif;
@@ -36,7 +35,6 @@ h3 {
   margin: 10px 0px;
   text-align: center;
 }
-
 h4 {
   color: green;
   font-family: 'Quicksand', sans-serif;
@@ -44,7 +42,7 @@ h4 {
   font-weight: 300;
 }
 	.table{
-	color: red;
+	color:#7751a3;
 	list-style-type: inherit;
 	text-align: center;
 	font-style: italic;
@@ -65,7 +63,6 @@ h4 {
     font-size: 16px;
     margin:20px 20px 20px 20px;
 	}
-
 body{
 	background-size:cover;
 	background-repeat: no-repeat;
@@ -77,14 +74,31 @@ body{
 	padding: 10px 10px 10px 10px;
 	overflow:scroll;
 }
+.ppt{
+	color:#833dce;
+	font-size:70px;
+	letter-spacing: 4px;
+	word-spacing: 2px;
+	word-wrap: break-word;
+	margin: 10px;
+	line-height: 70px;
+	border:3px solid gray;
+	background-color: #363a6a;
+	border-radius: 190px;
+	margin: 100px 300px 100px 300px;
 
+}
+.pptx{
+	border-radius: 50px;
+	border-color: black;
+}
   </style></head>	
 	  <body background="cont1.jpg">
 <div class="hero-image">
 <div class="hero-text> 	
 <div class="detail">
   <center><h1>details</h1></center>
-<h2><table color="green">
+<center><table class="table" border="5px solid black" cellspacing="20px">
 <div class="table">
 <tr>
 <td>name</td>
@@ -120,8 +134,9 @@ body{
 </tr>
 <tr>
   <td>engineering studying</td>
-   <td>ksrce ,tiruchengode</td>                                                                       
-</table></h2>
+   <td>ksrce ,tiruchengode</td> 
+   </tr>                                                                      
+</table></center>
 </div>
 </div>
 </div>
@@ -134,7 +149,7 @@ body{
 </div>
 <center><h1>contact</h1></center>
 <div class="table">
-<center><table cellspacing="20px">
+<center><table cellspacing="20px" border="5px solid black">
 	<tr>
 		<th><img src="contact1.png"with="100px"height="100px"></th>
 		<th>number</th>
@@ -156,10 +171,11 @@ body{
 		<th>gmail</th>
 		<th>navaneethavishnu322@gmailcom</th>
 	</tr>
-</table></center>
-<center><h1><i>ppt presentation</i></h1></center>
-<h2><b>water and sea pollution</b></h2>
-<center><a href="sea.pptx" target="_blank"><img src="ppt.jpg"height="100px"width="100px"</a></center>													  
+</table></center><div class="ppt">
+<center><i>ppt presentation</i></center>
+<b>water and sea pollution</b>
+</div>
+<center><a href="sea.pptx" target="_blank"><div class="pptx"><img src="ppt.jpg"height="100px"width="100px"</a></div></center>													  
 <center><a href="vishnunew.html"><button class="button">home</button></a></center>													  
 <center><a href="educationnava.html"><button class="button">back</button></a></center>
 </div>
@@ -167,4 +183,3 @@ body{
 </div>
 </body>
 </html>
-
