--- a/vishnunew.html
+++ b/vishnunew.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- saved from url=(0051)file:///C:\Users\indhu_2\Desktop\vishnu page/n.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -6,7 +7,7 @@
 h1{ 
    color: red;
    background-colour:blue;
-  font-family:arial;
+  font-family:Broadway;
   font-size: 70px;
   font-weight: 400;
   line-height: 60px;
@@ -15,10 +16,11 @@ h1{
   
 h2 {
   color: red;
-  font-family: 'Open Sans', sans-serif;
-  text-align: center;
-  font-size: 28px;
+  font-family:MT Poster Compressed;
+  font-size: 38px;
   font-weight: 100;
+  line-height: 70px;
+  word-spacing: 3px;
 }
     p {
     color:orange;
@@ -63,12 +65,26 @@ background-attachment: fixed;
 background-repeat:no repeat;
    boder:3px dotted black;
 }
+.para{
+ color: green;
+  font-style: italic;
+  font-family:Edwardian Script ITC;
+  text-align: center;
+  font-size: 45px;
+  font-weight: 200px;
+  width:550px;
+text-align:left;
+line-height:60px;
+line-weight:30px;
+padding:10px 20px 10px 20px;
+}
 .tht{
-  color: black;
-  font-weight: 150px;
-  font-size: 130px;
+  color: indico;
+  font-weight: 100px;
+  font-family: Edwardian Script ITC;
+  font-size: 100px;
   font-feature-settings: all;
-  line-height: 130px;
+  line-height: 100px;
   word-wrap: break-word;
   word-spacing: 3px;
 }
@@ -79,14 +95,16 @@ background-repeat:no repeat;
 <div class="hero-text>
 <div class="margin">
   <center><h1><i>Navaneethamahavishnu</i></h1></center>
-   <center><h2><i>computer science and engineering</i></h2><h2></h2></center>
-   <center> <h2><i>second year</i></h2><center>
-    <center><h2><i>ksr college of engineering</i></h2></center>
-    </div>
+</div>
+   
 <div class="image">
    <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px"></center>
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
+<h2><u>about me</u></h2>
+<div class="para">
+i am A.Navaneethamahavishnu,second year ,computer science  and engineering,studing ksr college of engineering,tiruchengode.......
+</div>
      <div class="tht"><center><u>success has no time limit</u></center></div>
   <center><p><u>APJ Abdul Kalam Quote</u> Creativity is the key to success in the future,and primary education where teachers can bring creativity in children at that level.</p></center>
 <center><a href="index.html"><button class="button">back</button></a></center>
