--- a/data.html
+++ b/data.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <title>data html</title>
-<style>
+<style type="text/css" rel="stylesheet">
 h1{ 
-   color: blue;
-   background-colour:blue;
-  font-family:arial;
+   color:block ;
+  font-family:Broadway;
   font-size: 70px;
   font-weight: 400;
   line-height: 60px;
-border:double black;
+border:7px solid #9e3c99;
+background:#aa652c;
 	border-radius:15px;
 	letter-spacing:3px;
 padding:20px 20px 20px 20px;
@@ -16,11 +17,11 @@ padding:20px 20px 20px 20px;
   
 h2 {
   color: #020316;
-  font-family: 'Open Sans', sans-serif;
+  font-style: italic;
+  font-family:Edwardian Script ITC;
   text-align: center;
   font-size: 45px;
   font-weight: 200px;
-font-style:italic;
 text-align:center;
 line-height:60px;
 line-weight:30px;
@@ -42,14 +43,12 @@ h4 {
   font-weight: 300;
 }
 	.table{
-	color:#7751a3;
-	list-style-type: inherit;
+	color:#a1a529;
 	text-align: center;
-	font-style: italic;
-	font-size: 50px;
-	font-family: arial;
-	font-weight: 75px;
-	line-height: 50px;
+	font-size: 100px;
+	font-family: Edwardian Script ITC;
+	font-weight: 100px;
+	line-height: 100px
 }
 	.button {
     color: red;
@@ -77,6 +76,7 @@ body{
 .ppt{
 	color:#833dce;
 	font-size:70px;
+	font-family: Broadway;
 	letter-spacing: 4px;
 	word-spacing: 2px;
 	word-wrap: break-word;
@@ -92,13 +92,53 @@ body{
 	border-radius: 50px;
 	border-color: black;
 }
+.cor{
+color:#a1a529;
+	font-size:70px;
+	font-family: Broadway;
+	letter-spacing: 4px;
+	word-spacing: 2px;
+	word-wrap: break-word;
+	margin: 10px;
+	line-height: 70px;
+	border:3px solid gray;
+	background-color: #363a6a;
+	border-radius: 190px;
+	margin: 100px 300px 100px 300px;
+	}
+	.let{
+		color:#799b43;
+		font-size:100px;
+		font-weight: 100px;
+		font-family:  Edwardian Script ITC;
+	letter-spacing: 4px;
+	word-spacing: 2px;
+	word-wrap: break-word;
+	margin: 10px;
+	line-height: 100px;
+	
+	}
+	.progress[value]::-webkit-progress-bar{
+		width: 250px;
+		height: 30px;
+		content: '';
+		position: absolute;
+		appearance:none;
+		top: 7px;
+		border: 3px solid black;
+		border-radius: 5px;
+		background-color: #eee;
+		box-shadow: aqua;
+
+
+	}
   </style></head>	
 	  <body background="cont1.jpg">
 <div class="hero-image">
-<div class="hero-text> 	
+<div class="hero-text"> 	
 <div class="detail">
   <center><h1>details</h1></center>
-<center><table class="table" border="5px solid black" cellspacing="20px">
+<center><i><table class="table" border="0px solid black" cellspacing="20px" font-style="italic">
 <div class="table">
 <tr>
 <td>name</td>
@@ -136,7 +176,7 @@ body{
   <td>engineering studying</td>
    <td>ksrce ,tiruchengode</td> 
    </tr>                                                                      
-</table></center>
+</table></i></center>
 </div>
 </div>
 </div>
@@ -147,39 +187,77 @@ body{
 <div class="hero-text>
 	<div class="image">
 </div>
-<center><h1>contact</h1></center>
+<center><h1><i>contact</i></h1></center>
 <div class="table">
-<center><table cellspacing="20px" border="5px solid black">
+<center><i><table cellspacing="20px" border="0px solid black">
 	<tr>
 		<th><img src="contact1.png"with="100px"height="100px"></th>
-		<th>number</th>
 		<th>9524180019</th>
 	</tr>
 	<tr>
 		<th><a href="https://www.facebook.com/navaneethan.navaneethan.5070276"><img src="face2.jpg" height="100px"with="100px"></th>
-		<th>facebook</th>
 		<th>Navaveethan Navaneethan</th>
 		
 	</tr>
 	<tr>
 		<th><a href="WhatsApp1.html"><img src="whatsapp.jpg"height="100px"with="100px"></th>
-		<th>whatsapp</th>
 		<th>9524180019</th>
 	</tr>
 	<tr>
 		<th><a href="https://www.google.com/gmail/"><img src="gmail.png"height="100px"with="100px"></th>
-		<th>gmail</th>
 		<th>navaneethavishnu322@gmailcom</th>
 	</tr>
-</table></center><div class="ppt">
+</table></i></center>
+<div class="ppt">
 <center><i>ppt presentation</i></center>
-<b>water and sea pollution</b>
 </div>
-<center><a href="sea.pptx" target="_blank"><div class="pptx"><img src="ppt.jpg"height="100px"width="100px"</a></div></center>													  
-<center><a href="vishnunew.html"><button class="button">home</button></a></center>													  
-<center><a href="educationnava.html"><button class="button">back</button></a></center>
+<i color="indico">water and sea pollution<i>
+<center><a href="sea.pptx" target="_blank"><div class="pptx"><img src="ppt.jpg"height="100px"width="100px"</a></center></div>
+<center><a href="vishnunew.html"><button class="button">home</button></a></center>
+</div>													  
 </div>
 </div>
 </div>
+<center><h1>education</h1></center>
+<center><table cellspacing="20px">
+<tr>
+  <td class="let">10th marks</td>
+  <div class="progress">
+  <td><progress value="84" max="100" width="50px" color ="blue" height="20px"></progress></td>
+</div>
+
+</tr>
+<td class="let">12th marks</td>
+<td><progress value="82" max="100" content='989'> </progress></td>
+</tr>
+<tr>
+<td class="let">1st semster</td>
+<td><progress value="73" max="100" content="7.3"></progress></td>
+</tr>
+<tr>
+<td class="let">2nd semester</td>
+<td><progress value="77" max="100" height="50px" width="50px"></progress></td>
+</tr>
+</table></center>
+<center class="cor">course completed</center>
+<center><table cellspacing="20px">
+<tr>
+  <td class="let">html</td>
+  <td><progress value="100" max="100" width="50px" color ="blue" height="20px"></progress></td>
+
+</tr>
+<td class="let">css</td>
+<td><progress value="100" max="100" content='989'> </progress></td>
+</tr>
+<tr>
+<td class="let">java script</td>
+<td><progress value="20" max="100" content="7.3"></progress></td>
+</tr>
+<tr>
+<td class="let">c++</td>
+<td><progress value="60" max="100" content="7.7"></progress></td>
+</tr>
+</table></center>
 </body>
+
 </html>
