--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ background-attachment: fixed;
 <body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
-    <center><h1 style="font-size:50px">Navaneethan Page</h1></center>
+    <center><h1 <animate attributeType="XML" attributeName="x" from="-100" to="120"
+        dur="10s" repeatCount="indefinite"/>style="font-size:50px">Navaneethan Page</h1></center>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
