--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@ background-attachment: fixed;
    }
 </style>
 </head>
-<body background="back.jpg">
+<body background="back.jpg"   <animate attributeType="XML" attributeName="back.jpg" from="-100" to="120"
+        dur="10s" repeatCount="indefinite"/>>
 <div class="hero-image">
   <div class="hero-text">
-    <animate Navaneethan Page>
+    <marquee loop="2" bgcolor="blue">
+<img src="logo.jpg"> Navaneethan Page</marquee>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
