--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ background-attachment: fixed;
 <div class="hero-image">
   <div class="hero-text">
     <marquee loop="2" bgcolor="blue">
-<img src="logo.jpg"> Navaneethan Page</marquee>
+<h1> Navaneethan Page</h1></marquee>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
