--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ background-attachment: fixed;
    }
 </style>
 </head>
-<body background="back.jpg"   <animate attributeType="XML" attributeName="back.jpg" from="-100" to="120"
+<body background-animate attributeType="XML" attributeName="back.jpg" from="-100" to="120"
         dur="10s" repeatCount="indefinite"/>>
 <div class="hero-image">
   <div class="hero-text">
-    <marquee loop="2" bgcolor="blue">
+    <marquee loop="2" bgcolor="pink">
 <h1> Navaneethan Page</h1></marquee>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
