--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ background-attachment: fixed;
    }
 </style>
 </head>
-<body background-animate attributeType="XML" attributeName="back.jpg" from="-100" to="120"
-        dur="10s" repeatCount="indefinite"/>>
+<body background="back.jbg">
 <div class="hero-image">
   <div class="hero-text">
     <marquee loop="2" bgcolor="pink">
