--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ background-attachment: fixed;
    }
 </style>
 </head>
-<body background="back.jbg">
+<body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
     <marquee loop="2" bgcolor="pink">
