--- a/vishnunew.html
+++ b/vishnunew.html
@@ -15,7 +15,7 @@ h1{
   }
   
 h2 {
-  color: red;
+  color: #f46842;
   font-family:MT Poster Compressed;
   font-size: 38px;
   font-weight: 100;
@@ -23,7 +23,7 @@ h2 {
   word-spacing: 3px;
 }
     p {
-    color:orange;
+    color:#0bd0e2;
     text-align:center;
     font-style:italic;
     background-color:gray;
@@ -43,7 +43,7 @@ border-radius:20px;
 
   }
     .button {
-    color: red;
+    color: #e2360f;
   background-color: gray;
   font-weight: bold;
     border: 3px solid silver;
@@ -66,7 +66,7 @@ background-repeat:no repeat;
    boder:3px dotted black;
 }
 .para{
- color: green;
+ color: #23aa14;
   font-style: italic;
   font-family:Edwardian Script ITC;
   text-align: center;
@@ -94,7 +94,7 @@ padding:10px 20px 10px 20px;
 <div class="hero-image>
 <div class="hero-text>
 <div class="margin">
-  <center><h1><i>Navaneethamahavishnu</i></h1></center>
+   <center><marquee><h1><i>Navaneethamahavishnu</i></h1></marquee></center>
 </div>
    
 <div class="image">
