--- a/vishnunew.html
+++ b/vishnunew.html
@@ -98,7 +98,7 @@ padding:10px 20px 10px 20px;
 </div>
    
 <div class="image">
-   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px"></center>
+   <center><img src="photo.jpg" alt="gif" class="image" style="width:400px;height:500px" padding-top="60px"></center>
 </div>
 <center><a href="data.html"><button class="button">data</button></a></center>
 <h2><u>about me</u></h2>
