--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ background-attachment: fixed;
 <body background="back.jpg">
 <div class="hero-image">
   <div class="hero-text">
-    <marquee loop="2" bgcolor="pink">
+    <marquee loop="2" bgcolor="">
 <h1> Navaneethan Page</h1></marquee>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
