--- a/vishnunew.html
+++ b/vishnunew.html
@@ -66,7 +66,7 @@ background-repeat:no repeat;
    boder:3px dotted black;
 }
 .para{
- color: #23aa14;
+ color:#ed6002;
   font-style: italic;
   font-family:Edwardian Script ITC;
   text-align: center;
@@ -79,7 +79,7 @@ line-weight:30px;
 padding:10px 20px 10px 20px;
 }
 .tht{
-  color: indico;
+  color: #07ede9;
   font-weight: 100px;
   font-family: Edwardian Script ITC;
   font-size: 100px;
