--- a/vishnunew.html
+++ b/vishnunew.html
@@ -79,7 +79,7 @@ line-weight:30px;
 padding:10px 20px 10px 20px;
 }
 .tht{
-  color: #07ede9;
+  color: #00020f;
   font-weight: 100px;
   font-family: Edwardian Script ITC;
   font-size: 100px;
