--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@ font-style:bold;
   line-height: 80px;
   margin: 0;
 }
+   h2{
+      color: #b12bef;
+   background-colour:blue;
+  font-family:arial;
+font-style:italic;
+font-style:bold;
+  font-size: 120px;
+  font-weight: 400;
+  line-height: 60px;
+  margin: 0;
+   }
 body{
    background-repeat:no repeat;
 background-size: cover;
@@ -40,7 +51,7 @@ background-attachment: fixed;
 <div class="hero-image">
   <div class="hero-text">
     <marquee loop="2" bgcolor="">
-<h1> Navaneethan Page</h1></marquee>
+<h1> welcome</h1></marquee>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
