--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ background-attachment: fixed;
   <div class="hero-text">
     <marquee loop="2" bgcolor="">
 <h1> welcome</h1></marquee>
-     <marquee>to my page</marquee>
+     <h2><marquee>to my page</marquee></h2>
 <center><a href="vishnunew.html"><button class="button">click me!</button></a></center>
 </div>
 </div>
