--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ font-style:bold;
   font-size: 120px;
   font-weight: 400;
   line-height: 80px;
-  margin: 60;
+  margin: 90;
+      margin-top:30px;
    }
 body{
    background-repeat:no repeat;
