--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 h1{ 
-   color: #b12bef;
+   color: #0962e8;
    background-colour:blue;
   font-family:arial;
 font-style:italic;
@@ -17,12 +17,12 @@ font-style:bold;
   margin: 0;
 }
    h2{
-      color: #b12bef;
+      color: #0962e8;
    background-colour:blue;
   font-family:arial;
 font-style:italic;
 font-style:bold;
-  font-size: 120px;
+  font-size: 80px;
   font-weight: 400;
   line-height: 80px;
       margin-top:30px;
