--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 h1{ 
-   color: #0962e8;
+   color: #1404f2;
    background-colour:blue;
   font-family:arial;
 font-style:italic;
@@ -17,7 +17,7 @@ font-style:bold;
   margin: 0;
 }
    h2{
-      color: #0962e8;
+      color: #1404f2;
    background-colour:blue;
   font-family:arial;
 font-style:italic;
